--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
 body {
     height: 100%;
     margin: 0;
+    background-image: url(../img/werk-zoeken.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 #nav {
@@ -26,10 +30,11 @@ body {
 
 .buttonCategory {
     display: grid;
-    grid-template-columns: repeat(6, 2fr);
+    grid-template-columns: 3fr 3fr 3fr 3fr;
     column-gap: .5em;
 }
 
+.buttonCategory a,
 .buttonCategory button {
     width: 100%;
     margin-bottom: .3em;
